# cmake-demo-sol

./: CMakeLists.txt  README.md  build.bat  install.bat  main.cpp  test.lua
lua/: CMakeLists.txt
lua/plugins/: CMakeLists.txt
lua/plugins/luasocket/: CMakeLists.txt  luasocket.c  luasocket.h  mime.c  mime.h
